<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/file_chooser_bottom_sheet_txt_title"
        android:padding="5dp"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:textColor="@android:color/black"
        android:hint="@string/bottom_sheet_title"
        android:gravity="center_horizontal"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardButton"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_reading"
            android:id="@+id/file_chooser_bottom_sheet_btn_continue_reading"
            style="@style/WhiteButton"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardButton"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_from_recent_list"
            android:id="@+id/file_chooser_bottom_sheet_btn_remove_item"
            style="@style/WhiteButton"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardButton"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_everything_from_recent_list"
            android:id="@+id/file_chooser_bottom_sheet_btn_remove_all"
            style="@style/WhiteButton"/>
    </android.support.v7.widget.CardView>

</LinearLayout>